--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@material-ui/core": "^1.4.2",
+        "@material-ui/icons": "^2.0.0",
         "axios": "^0.18",
         "babel-preset-react": "^6.23.0",
         "bootstrap": "^4.0.0",
@@ -17,18 +19,19 @@
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
-        "popper.js": "^1.12",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
-        "@material-ui/core": "^1.4.2",
-        "@material-ui/icons": "^2.0.0",
         "luxbar": "^0.3.2",
         "normalize.css": "^8.0.0",
+        "popper.js": "^1.12",
+        "react": "^16.4.2",
         "react-animate-on-scroll": "^2.1.5",
         "react-animated-css": "^1.0.4",
+        "react-dom": "^16.4.2",
         "react-router-dom": "^4.3.1",
         "react-scripts": "1.1.4",
         "reactstrap": "^6.3.1",
         "styled-components": "^3.3.3"
+    },
+    "dependencies": {
+        "availity-reactstrap-validation": "^2.0.4"
     }
 }
